Fri Mar 19 11:07:06 2004  Owen Taylor  <otaylor@redhat.com>

	* tests/atomic-test.c (main): Make computation
	of "biggest_pointer" vaguely more portable.
	(#137498, Jonas Jonsson)

2004-03-16  Tor Lillqvist  <tml@iki.fi>

	* configure.in: Define HAVE_INT64_AND_I64 also in the mingw (gcc
	on Win32) case, where the 64-bit type is called long long, but the
	system printf/scanf format modifier for 64-bit integers is still I64.

2004-03-16  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

Tue Mar 16 11:50:56 2004  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.4.0 ===

	* configure.in: Version 2.4.0, interface age 0.

	* README.in: Updates

	* NEWS: Updates

Sun Mar 14 13:56:48 2004  Owen Taylor  <otaylor@redhat.com>

	* glib/gmessages.c (escape_string): Handle invalid
	UTF-8. (#131218, patch from Matthias Clasen)

Sun Mar 14 13:23:36 2004  Owen Taylor  <otaylor@redhat.com>

	* glib/gspawn.c: Use fork1() not fork for 
	G_THREADS_IMPL_SOLARIS. (#136971, Sebastian Wilhelmi)

Sun Mar 14 12:58:30 2004  Owen Taylor  <otaylor@redhat.com>

	* glib/gmain.c: if _POLL_EMUL_H is defined, undefine
	HAVE_POLL to prefer our own poll() emulation to the
	lame OS/X one. (#136956, Manish Singh)

Sat Mar 13 23:30:53 2004  Owen Taylor  <otaylor@redhat.com>

	* glib/gmacros.h (G_STMT_START): Add __extension__
	to G_STMT_START to quite gcc -pedantic. (#131899,
	Olivier Biot)

Sat Mar 13 23:18:45 2004  Owen Taylor  <otaylor@redhat.com>

	* tests/env-test.c (main): Remove critical log handler;
	we can't trigger g_return_if_fails() in our test suite
	even silently, because the user could have compiled
	with --disable-debug. #if 0 the tests for
	g_setenv/g_unsetenv with a "foo=bar" variable name.
	(#136709, reported by Frédéric L. W. Meunier)

Sat Mar 13 23:10:35 2004  Owen Taylor  <otaylor@redhat.com>

	Some warning fixes for the Sun compiler (Reported by 
	David L. Cooper II, #136401)

	* glib/giochannel.c (g_io_channel_read): Return